# back

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fixtures.json  pos.json  pyproject.toml  script.py
.github/workflows/: django.yml
backend/: settings.py  swagger.py  urls.py
backend/backend/: settings.py
educational_degrees/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
educational_degrees/migrations/: 0001_initial.py  0002_alter_educationaldegree_detailed_info_and_more.py  0003_alter_educationaldegree_options.py  0004_educationaldegreequalificationworks_and_more.py  0005_educationaldegreedisciplineprograms_subject_and_more.py  0006_alter_subject_options_alter_subjectblock_options_and_more.py  0007_alter_qualificationwork_topic_of_work.py  0008_alter_qualificationwork_options.py  0009_remove_educationaldegree_study_programs_desc_and_more.py  0010_educationaldegreestudyprogramsfiles_and_more.py  0011_alter_educationaldegreedetailsfiles_options_and_more.py
employees/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_alter_scientificworktype_options_and_more.py  0003_alter_employee_image.py  0004_alter_employee_awards_and_more.py  0005_alter_employee_teach_disciplines.py  0006_alter_employee_awards_and_more.py  0007_alter_employee_ranks.py  0008_remove_teachdiscipline_discipline_name_unique_constraint.py  0009_alter_employee_awards_and_more.py  (+12 more)
files/: models.py
fixtures/: educational_degrees.json  employees.json  files.json  library.json
news/: models.py
(+4 files in other folders)
